--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-sessions": "^1.0.6",
+    "handlebars": "^4.7.7",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.12.5"
   }
 }
