we fixed all the errors and made a nice boiler plate and then we made all the models and index for them(untested :()

--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
+  "name": "just-tech-news",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jtboyman/just-tech-news.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jtboyman/just-tech-news/issues"
+  },
+  "homepage": "https://github.com/jtboyman/just-tech-news#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
-    "express-sessions": "^1.0.6",
-    "handlebars": "^4.7.7",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.5"
+    "sequelize": "^6.12.0-beta.3"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5"
   }
 }
